--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                   font-family: 'Heebo', sans-serif;
                   font-size: calc(30px + 0.5vw);
                 ">
-              Ashish Verma<br /><span lang="bn">आशीष वर्मा</span>
+              Sudipta Bhuyan<br /><span lang="bn">आशीष वर्मा</span>
             </h1>
 
             <span class="headColor"><b>PhD Student</b></span> <br />
