--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Profile of Ashish Verma" />
   <meta name="twitter:description"
-    content="Concise work detail and profile of Ashish Verma, PhD Scholar, Indian Institute of Technology, Kharagpur, India" />
+    content="Concise work detail and profile of Sudipta Bhuyan, PhD Scholar, Indian Institute of Technology, Kharagpur, India" />
   <meta name="twitter:url" content="https://ashishverma03.github.io/" />
   <meta name="twitter:image" content="https://ashishverma03.github.io/assets/images/bgImg.jpg" />
 
-  <title>Homepage of Ashish Verma</title>
+  <title>Homepage of Sudipta Bhuyan</title>
 
   <!--Page main CSS tag-->
   <link rel="stylesheet" href="main.css" />
@@ -69,7 +69,7 @@
                   font-family: 'Heebo', sans-serif;
                   font-size: calc(30px + 0.5vw);
                 ">
-              Sudipta Bhuyan<br /><span lang="bn">आशीष वर्मा</span>
+              Sudipta Bhuyan<br /><span lang="bn"></span>
             </h1>
 
             <span class="headColor"><b>PhD Student</b></span> <br />
