--- a/Fuzzy-Fusion-SOD.html
+++ b/Fuzzy-Fusion-SOD.html
@@ -8,35 +8,35 @@
 
     <!--Update this for shortest possible description-->
     <meta name="description"
-        content="Generative Augmentation Driven Prediction of Diverse Visual Scanpaths in Images." />
+        content="RGB-D Fusion through Zero-shot Fuzzy Membership Learning for Salient Object Detection." />
 
     <!--This part is to give credit to the person who developed the site-->
     <meta name="author" content="Aniket Patra" />
 
     <!---------------------og tags are for open graph ----------------->
-    <meta property="og:title" content="Diverse-Visual-Scanpath" />
+    <meta property="og:title" content="Fuzzy-Fusion-SOD" />
 
-    <meta property="og:url" content="https://ashishverma03.github.io/diverse-visual-scanpath" />
-    <meta property="og:image" content="https://ashishverma03.github.io/assets/images/lfsfa_thumb.jpg" />
+    <meta property="og:url" content="https://https://sudiptabhuyan1.github.io//Fuzzy-Fusion-SOD" />
+    <meta property="og:image" content="https://https://sudiptabhuyan1.github.io//assets/images/lfsfa_thumb.jpg" />
     <meta property="og:image:type" content="image/jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:image:alt" content="Iterative Dehazing Training Stage 3" />
+    <meta property="og:image:alt" content="" />
 
     <meta property="og:type" content="article" />
     <meta property="og:description"
-        content="Generative Augmentation Driven Prediction of Diverse Visual Scanpaths in Images." />
+        content="RGB-D Fusion through Zero-shot Fuzzy Membership Learning for Salient Object Detection." />
 
     <meta property="og:locale" content="en_IN" />
     <meta property="og:locale:alternate" content="en_US" />
 
     <!---------------TWITTER CRDS------------------------>
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Diverse-Visual-Scanpath" />
+    <meta name="twitter:title" content="Fuzzy-Fusion-SOD" />
     <meta name="twitter:description"
         content="Generative Augmentation Driven Prediction of Diverse Visual Scanpaths in Images." />
-    <meta name="twitter:url" content="https://ashishverma03.github.io/diverse-visual-scanpath" />
-    <meta name="twitter:image" content="https://ashishverma03.github.io/assets/images/lfsafa_thumb.jpg" />
+    <meta name="twitter:url" content="https://sudiptabhuyan1.github.io/Fuzzy-Fusion-SOD" />
+    <meta name="twitter:image" content="https://sudiptabhuyan1.github.io/assets/images/lfsafa_thumb.jpg" />
 
     <title>Diverse Visual Scanpaths</title>
 
