--- a/Fuzzy-Fusion-SOD.html
+++ b/Fuzzy-Fusion-SOD.html
@@ -87,7 +87,7 @@
           font-family: 'Raleway', sans-serif;
           font-weight: bold;
         ">
-            Generative Augmentation Driven Prediction of Diverse Visual Scanpaths in Images
+            RGB-D Fusion through Zero-shot Fuzzy Membership Learning for Salient Object Detection
         </h1>
 
         <!--Author Name-->
@@ -98,8 +98,8 @@
           font-family: 'Roboto', sans-serif;
         ">
             <a href="https://github.com/ashishverma03" target="_blank" style="text-decoration: none; color: rgb(70, 70, 70)"
-                onmouseover="this.style.color='gray'" onmouseout="this.style.color='rgb(70, 70, 70)'"><u>Ashish
-                    Verma</u></a>, Debashis Sen
+                onmouseover="this.style.color='gray'" onmouseout="this.style.color='rgb(70, 70, 70)'"><u>Sudipta Bhuyan
+                    </u></a>, Aupendu Kar  </u></a>, Debashis Sen </u></a>, Sankha Deb
         </h2>
 
         <!--Institution Name-->
@@ -109,7 +109,7 @@
           font-size: calc(10px + 0.5vw);
           font-family: 'Roboto', sans-serif;
         ">
-            Department of Electronics and Electrical Communication Engineering
+            Advanced Technology Development Centre
             <br />
             Indian Institute of Technology Kharagpur, India
         </h3>
