--- a/Fuzzy-Fusion-SOD.html
+++ b/Fuzzy-Fusion-SOD.html
@@ -38,7 +38,7 @@
     <meta name="twitter:url" content="https://sudiptabhuyan1.github.io/Fuzzy-Fusion-SOD" />
     <meta name="twitter:image" content="https://sudiptabhuyan1.github.io/assets/images/lfsafa_thumb.jpg" />
 
-    <title>Diverse Visual Scanpaths</title>
+    <title>Fuzzy-Fusion-SOD</title>
 
     <!--Page Icon-->
     <link rel="icon" type="image/png" href="assets/images/ak2.ico" />
