--- a/Fuzzy-Fusion-SOD.html
+++ b/Fuzzy-Fusion-SOD.html
@@ -50,7 +50,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <!--Extrenal css-->
-    <link rel="stylesheet" href="diverse-visual-scanpath/subpage.css" />
+    <link rel="stylesheet" href="subpage-fuzzy-fusion-SOD/subpage.css" />
 </head>
 
 <body>
@@ -59,7 +59,7 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="https://ashishverma03.github.io/"><i
+                    <a class="navbar-brand" href="https://sudiptabhuyan1.github.io/"><i
                             class="fas fa-house-user d-inline-block"></i></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -97,7 +97,7 @@
           font-size: calc(10px + 0.5vw);
           font-family: 'Roboto', sans-serif;
         ">
-            <a href="https://github.com/ashishverma03" target="_blank" style="text-decoration: none; color: rgb(70, 70, 70)"
+            <a href="https://github.com/sudiptabhuyan1" target="_blank" style="text-decoration: none; color: rgb(70, 70, 70)"
                 onmouseover="this.style.color='gray'" onmouseout="this.style.color='rgb(70, 70, 70)'"><u>Sudipta Bhuyan
                     </u></a>, Aupendu Kar  </u></a>, Debashis Sen </u></a>, Sankha Deb
         </h2>
@@ -159,17 +159,20 @@
             <div class="col">
                 <ol type="i">
                     <li>
-                        A visual scanpath predictor network for images, which is
-                        trained end-to-end, driven by generative data augmentation.
+                        We propose a zero-shot framework for deep RGB-D
+                        fusion leading to salient object detection, which can
+                        work with arbitrary color and depth processing modules
+                        without any prior training.
                     </li>
                     <li>
-                        A HMM-based generative data augmentation procedure to obtain
-                        image-specific training pairs of images & visual scanpaths.
+                        We propose a measure that quantifies similarity between
+                        fuzzy memberships and state how its properties are favorable
+                        for our purpose.
                     </li>
                     <li>
-                        A training strategy based on the uniqueness of a viewer to 
-                        generate multiple and diverse visual scanpaths of different 
-                        viewer varieties for an image.
+                        To the best of our knowledge, ours is the first work on
+                        fuzzy membership learning through zero-shot network
+                        optimization.
                     </li>
                 </ol>
             </div>
@@ -184,7 +187,7 @@
             <div class="col d-flex justify-content-center">
                 <figure class="figure">
                     <span class="d-flex justify-content-center">
-                        <img class="img-fluid figure-img" src="assets/subpage-diverse-visual-scanpath/archtitecture/new_overall_model.jpg"
+                        <img class="img-fluid figure-img" src="assets/subpage-fuzzy-fusion-SOD/archtitecture/new_overall_model.jpg"
                             class="figure-img img-fluid rounded" title="proposed architecture image"
                             height="800" width="1200"
                             alt="proposed diverse visual scanpath prediction" /></a></span>
