--- a/Fuzzy-Fusion-SOD.html
+++ b/Fuzzy-Fusion-SOD.html
@@ -187,15 +187,13 @@
             <div class="col d-flex justify-content-center">
                 <figure class="figure">
                     <span class="d-flex justify-content-center">
-                        <img class="img-fluid figure-img" src="assets/subpage-fuzzy-fusion-SOD/archtitecture/new_overall_model.jpg"
-                            class="figure-img img-fluid rounded" title="proposed architecture image"
+                        <img class="img-fluid figure-img" src="assets/subpage-fuzzy-fusion-SOD/fusionsystemframework_corr6_page-0001.jpg"
+                            class="figure-img img-fluid rounded" title="proposed framework image"
                             height="800" width="1200"
-                            alt="proposed diverse visual scanpath prediction" /></a></span>
+                            alt="Zero-shot Fuzzy Membership Learning (Z-FML) fusion framework" /></a></span>
                     <figcaption class="text-center" id="figCap">
-                        The architecture of the proposed model for visual scanpath 
-                        prediction comprises of two main novel components: augmentation
-                        of image-visual scanpath pairs using HMM and the LSTM-based 
-                        scanpath predictor.
+                        The architecture of the proposed framework for RGB-D fusion for salient object detection
+                        comprises of two main components: fuzzy membership learning network and fuzzy inference system.
                         <!--EDIT CAPTION HERE-->
                     </figcaption>
                 </figure>
