--- a/Fuzzy-Fusion-SOD.html
+++ b/Fuzzy-Fusion-SOD.html
@@ -209,15 +209,13 @@
                 </h2>
                 <figure class="figure">
                     <span class="d-flex justify-content-center">
-                        <img class="img-fluid figure-img" src="assets/subpage-diverse-visual-scanpath/Results/Table1.jpg"
-                            class="figure-img img-fluid rounded" title="Proposed sub-aperture feature adaptation module"
+                        <img class="img-fluid figure-img" src="assets/subpage-fuzzy-fusion-SOD/Capture.JPG"
+                            class="figure-img img-fluid rounded" title="Quantitative comparison with state-of-the-art RGB-D SOD methods"
                             height="600" width="600"
                             alt="proposed diverse visual scanpath prediction" /></a></span>
                     <figcaption class="text-center" id="figCap">
-                        Table 1: Performance comparison of the various multiple scanpath prediction models on 
-                        the OSIE test set. The top-3 ranked models for each MultiMatch score are indicated by 
-                        subscripts. The top-3 models with the closest Intra-SS to Human-GT's (G) are also 
-                        indicated by subscripts to tick marks denoting they are within G&plusmn;0.25.
+                        Table 1: THE COMPARISON OF OUR ZERO-SHOT FUSION BASED RGB-D SOD PERFORMANCE WITH DIFFERENT STATE-OF-THE-ART ALGORITHMS. 
+                        BEST, SECOND BEST AND THIRD BEST PERFORMANCE ARE MARKED IN RED, GREEN AND BLUE, RESPECTIVELY.
                         <!--EDIT CAPTION HERE-->
                     </figcaption>
                 </figure>
@@ -231,14 +229,11 @@
                     <div class="col-12">
                         <figure class="figure">
                             <span class="d-flex justify-content-center">
-                                <img class="img-fluid figure-img" src="assets/subpage-diverse-visual-scanpath/Results/Table2.jpg"
-                                    class="figure-img img-fluid rounded" title="Model ablation studies" height="600"
+                                <img class="img-fluid figure-img" src=""
+                                    class="figure-img img-fluid rounded" title="" height="600"
                                     width="1200" alt="Table number 2, caption is mentioned below." /></a></span>
                             <figcaption class="text-center" id="figCap">
-                                Table 2: Cross-dataset evaluation of the various multiple scanpath prediction models.
-                                The top-3 ranked models for each MultiMatch score are indicated by subscripts. 
-                                The top-3 models with the closest Intra-SS to that of Human-GT (G) are also indicated
-                                by subscripts to tick marks denoting that they are within G&plusmn;0.25.
+                                
                                 <!--EDIT CAPTION HERE-->
                             </figcaption>
                         </figure>
