--- a/Fuzzy-Fusion-SOD.html
+++ b/Fuzzy-Fusion-SOD.html
@@ -251,12 +251,12 @@
             <div class="col d-flex justify-content-center">
                 <figure class="figure">
                     <span class="d-flex justify-content-center">
-                        <img class="img-fluid figure-img" src="assets/subpage-diverse-visual-scanpath/visComparison/Final_plotted_image1.jpg"
+                        <img class="img-fluid figure-img" src="assets/subpage-fuzzy-fusion-SOD/singleComparison2_page-0001.jpg"
                             class="figure-img img-fluid rounded"
-                            title="Qualitative comparison of our proposed DiviScan" width="1300"
-                            alt="Image for qualitative comparison of our proposed DiviScan" /></a></span>
+                            title="Qualitative comparison of the proposed fusion-based RGB-D SOD method with different state-of-the-art algorithms" width="1300"
+                            alt="" /></a></span>
                     <figcaption class="text-center" id="figCap">
-                        Visual scanpaths (with highest SS) predicted by the various models embedded on images with different numbers of objects of interest.
+                        
                         <!--EDIT CAPTION HERE-->
                     </figcaption>
                 </figure>
@@ -270,7 +270,7 @@
         <div class="row">
             <div class="col-sm-4 text-center">
                 <figure class="figure">
-                    <a href="https://github.com/ashishverma03/DiViScan" rel="external nofollow" target="_blank"
+                    <a href="https://github.com/sudiptabhuyan1/FuzzyFusionSOD" rel="external nofollow" target="_blank"
                         onmouseover="this.style.opacity='0.5'" onmouseout="this.style.opacity='1'"><i
                             class="fab fa-github" style="font-size: 120px; color: rgb(54, 54, 54)"></i>
                     </a>
@@ -333,7 +333,7 @@
         <footer>
             <p style="text-align: center">
                 <i class="far fa-copyright"></i> 2022
-                <a href="https://github.com/aupendu" target="_blank">Ashish Verma</a>.
+                <a href="https://github.com/aupendu" target="_blank">Sudipta Bhuyan</a>.
                 Made in
                 <a href="https://www.incredibleindia.org/" target="_blank"><img id="flag"
                         src="/assets/images/india-flag-icon-32.png" alt="My Great Country India's Flag" /></a>
