--- a/Fuzzy-Fusion-SOD.html
+++ b/Fuzzy-Fusion-SOD.html
@@ -214,8 +214,8 @@
                             height="600" width="600"
                             alt="proposed diverse visual scanpath prediction" /></a></span>
                     <figcaption class="text-center" id="figCap">
-                        Table 1: THE COMPARISON OF OUR ZERO-SHOT FUSION BASED RGB-D SOD PERFORMANCE WITH DIFFERENT STATE-OF-THE-ART ALGORITHMS. 
-                        BEST, SECOND BEST AND THIRD BEST PERFORMANCE ARE MARKED IN RED, GREEN AND BLUE, RESPECTIVELY.
+                        Table 1: The comparison of our zero-shot fusion based RGB-D SOD performance with different state-of-the-art algorithms. 
+                         Best, second best and third best performance are marked in red, green and blue, respectively.
                         <!--EDIT CAPTION HERE-->
                     </figcaption>
                 </figure>
