--- a/Fuzzy-Fusion-SOD.html
+++ b/Fuzzy-Fusion-SOD.html
@@ -231,7 +231,7 @@
                             <span class="d-flex justify-content-center">
                                 <img class="img-fluid figure-img" src=""
                                     class="figure-img img-fluid rounded" title="" height="600"
-                                    width="1200" alt="Table number 2, caption is mentioned below." /></a></span>
+                                    width="1200" alt="" /></a></span>
                             <figcaption class="text-center" id="figCap">
                                 
                                 <!--EDIT CAPTION HERE-->
