--- a/Fuzzy-Fusion-SOD.html
+++ b/Fuzzy-Fusion-SOD.html
@@ -212,7 +212,7 @@
                         <img class="img-fluid figure-img" src="assets/subpage-fuzzy-fusion-SOD/Capture.JPG"
                             class="figure-img img-fluid rounded" title="Quantitative comparison with state-of-the-art RGB-D SOD methods"
                             height="600" width="600"
-                            alt="proposed diverse visual scanpath prediction" /></a></span>
+                            alt="" /></a></span>
                     <figcaption class="text-center" id="figCap">
                         Table 1: The comparison of our zero-shot fusion based RGB-D SOD performance with different state-of-the-art algorithms. 
                          Best, second best and third best performance are marked in red, green and blue, respectively.
