--- a/Fuzzy-Fusion-SOD.html
+++ b/Fuzzy-Fusion-SOD.html
@@ -301,29 +301,21 @@
             <div class="col">
                 <ul>
                     <li style="text-align: justify">
-                        [7] L. Itti, C. Koch, and E. Niebur, “A model of saliency-based visual attention for rapid scene analysis,” IEEE T-PAMI, no. 11, pp. 1254–1259, Nov. 1998.
+                        [59] A. De Luca, and S. Termini, “A definition of a nonprobabilistic entropy in the setting of fuzzy sets theory,” Information and control, no. 4, Vol. 20, pp. 301–312, Nov. 1972.
                     </li>
                     <li style="text-align: justify">
-                        [10] O. Le Meur and Z. Liu, “Saccadic model of eye movements for free-viewing condition,” Vis. Res., vol. 116, pp. 152–164, Nov. 2015.
+                        [48] D. Bhandari and N. R. Pal, “Some new information measures for fuzzy sets” Information sciences, vol. 67, pp. 209–228, 1993.
                     </li>
                     <li style="text-align: justify">
-                        [11] C. Wloka, I. Kotseruba, and J. K. Tsotsos, “Active fixation control to predict saccade sequences,” in CVPR, Jun. 2018, pp. 3184–3193.
+                        [44] A. Shocher, N. Cohen, and M. Irani,, “Zero-shot super-resolution using deep internal learning,” in CVPR, 2018, pp. 3118–3126.
                     </li>
                     <li style="text-align: justify">
-                        [13] W. Sun, Z. Chen, and F. Wu, “Visual scanpath prediction using IOR-ROI recurrent mixture density network,” IEEE T-PAMI, vol. 43, no. 6, pp. 2101–2118, Dec. 2019.
+                        [13] F. Pourpanah, M. Abdar, Y. Luo, X. Zhou, R. Wang, C. P. Lim, X.-Z. Wang, and Q. J. Wu, “A review of generalized zero-shot learning methods,” IEEE T-PAMI, 2022.
                     </li>
                     <li style="text-align: justify">
-                        [22] G. Boccignone and M. Ferraro, “Modelling gaze shift as a constrained random walk,” Phys. A, Statist. Mech. Appl., vol. 331, no. 1-2, pp. 207– 218, Jan. 2004.19.
+                        [22] C. Li, R. Cong, Y. Piao, Q. Xu, and C. C. Loy,, “RGB-D salient object detection with cross-modality modulation and selection,” ECCV, pp. 225– 241, Springer.
                     </li>
-                    <li style="text-align: justify">
-                        [28] M. Assens Reina, X. Giro-i Nieto, K. McGuinness, and N. E. O’Connor, “Saltinet: Scan-path prediction on 360 degree images using saliency volumes,” in ICCVW, Oct. 2017, pp. 2331–2338.
-                    </li>
-                    <li style="text-align: justify">
-                        [29] M. Assens, X. Giro-i Nieto, K. McGuinness, and N. E. O’Connor, “Path-GAN: Visual scanpath prediction with generative adversarial networks,” in ECCVW, Sep. 2018.
-                    </li>
-                    <li style="text-align: justify">
-                        [33] X. Chen, M. Jiang, and Q. Zhao, “Predicting human scanpaths in visual question answering,” in CVPR, Jun. 2021, pp. 10 876–10 885.
-                    </li>
+                    
                 </ul>
             </div>
         </div>
