--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!--Update this for shortest possible description-->
   <meta name="description"
-    content="Concise work detail and profile of Ashish Verma, PhD Scholar, Indian Institute of Technology, Kharagpur, India" />
+    content="Concise work detail and profile of Sudipta Bhuyan, PhD Scholar, Indian Institute of Technology, Kharagpur, India" />
   <!--This part is to give credit to the person who developed the site-->
   <meta name="author" content="Aniket Patra" />
   <!--og tags are for open graph-->
-  <meta property="og:title" content="Profile of Ashish Verma" />
-  <meta property="og:url" content="https://ashishverma03.github.io/" />
-  <meta property="og:image" content="https://ashishverma03.github.io/assets/images/bgImg.jpg" />
+  <meta property="og:title" content="Profile of Sudipta Bhuyan" />
+  <meta property="og:url" content="https://sudiptabhuyan1.github.io/" />
+  <meta property="og:image" content="https://sudiptabhuyan1.github.io/assets/images/bgImg.jpg" />
 
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
@@ -21,15 +21,15 @@
 
   <meta property="og:type" content="profile" />
   <meta property="og:description"
-    content="Concise work detail and profile of Ashish Verma, PhD Scholar, Indian Institute of Technology, Kharagpur, India" />
+    content="Concise work detail and profile of Sudipta Bhuyan, PhD Scholar, Indian Institute of Technology, Kharagpur, India" />
 
   <!--TWITTER CARDS-->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Profile of Ashish Verma" />
+  <meta name="twitter:title" content="Profile of Sudipta Bhuyan" />
   <meta name="twitter:description"
     content="Concise work detail and profile of Sudipta Bhuyan, PhD Scholar, Indian Institute of Technology, Kharagpur, India" />
-  <meta name="twitter:url" content="https://ashishverma03.github.io/" />
-  <meta name="twitter:image" content="https://ashishverma03.github.io/assets/images/bgImg.jpg" />
+  <meta name="twitter:url" content="https://sudiptabhuyan1.github.io/" />
+  <meta name="twitter:image" content="https://sudiptabhuyan1.github.io/assets/images/bgImg.jpg" />
 
   <title>Homepage of Sudipta Bhuyan</title>
 
@@ -75,7 +75,7 @@
             <span class="headColor"><b>PhD Student</b></span> <br />
             <span>
               Image Processing and Computer Vision Lab, <br />
-              Department of Electronics and Electrical Communication Engg.,
+              Advanced Technology Development Centre,
               <br />
               Indian Institute of Technology Kharagpur, West Bengal, India
               <br />
@@ -90,13 +90,13 @@
                 <i class="ai ai-researchgate-square ai-2x"></i></a>
               <a href="">
                 <i class="ai ai-dblp-square ai-2x"></i></a>
-              <a href="https://ashishverma03.github.io/">
+              <a href="https://sudiptabhuyan1.github.io/">
                 <i class="ai ai-cv-square ai-2x"></i></a>
             </span>
             <br /><br />
             <span class="headColor">Email :
 
-              <span class="gScholar emailIcon" id="mailTo">ashish[dot]verma[at]iitkgp[dot]ac[dot]in
+              <span class="gScholar emailIcon" id="mailTo">sudiptabhuyan1[at]iitkgp[dot]ac[dot]in
                 <i class="fas fa-envelope d-none"></i></span>
             </span>
           </div>
@@ -108,7 +108,7 @@
             mt-3 mt-md-0
             mb-3 mb-md-0
           ">
-        <img src="assets/images/profile_pic.jpg" class="img-fluid img-thumbnail" alt="Image of Ashish Verma"
+        <img src="assets/images/profile_pic1.jpg" class="img-fluid img-thumbnail" alt="Image of Sudipta Bhuyan"
           style="max-width: 200px" />
       </div>
     </div>
