--- a/index.html
+++ b/index.html
@@ -117,16 +117,16 @@
     <hr />
     <div class="row">
       <div class="col-sm">
-        Ashish Verma has joined the Department of Electrical and Electronics
-        Communication Engineering of Indian Institute of Technology Kharagpur
+        Sudipta Bhuyan has joined the Advanced Technology Development Centre 
+        of Indian Institute of Technology Kharagpur
         as a Ph.D. Research Scholar in 2016, under the supervision of Prof.
-        Debashis Sen. Before that, he received an M. Tech degree in
-        Communication Systems from National Institute of Technology Patna in 2016
-        and a B. Tech degree in Electronics and Telecommunication Engineering from SSEC Bhilai(CSVTU) in 2013.
+        Debashis Sen. Before that, she received an M. Tech degree in
+        Communication Systems from VSSUT, Burla 2012
+        and a B. Tech degree in Applied Electronics and Instrumentation Engineering from SIT, Bhuabaneswarin 2009. She has a teaching experience of three and half years.
         <br />
         <br />
-        His research interests cover computer vision and deep learning, with
-        special emphasis on eye movement data analysis. Specifically, he is dedicated to
+        Her research interests cover Image processing, computer vision and deep learning, with
+        special emphasis on Salient object detection. Specifically, she is dedicated to
         designing learning frameworks to model human visual scanpaths for dynamic analysis
         of still images. He is also interested in exploring learning algorithms for action 
         recognition in still images and medical image analysis.
