--- a/index.html
+++ b/index.html
@@ -127,9 +127,8 @@
         <br />
         Her research interests cover Image processing, computer vision and deep learning, with
         special emphasis on Salient object detection. Specifically, she is dedicated to
-        designing learning frameworks to model human visual scanpaths for dynamic analysis
-        of still images. He is also interested in exploring learning algorithms for action 
-        recognition in still images and medical image analysis.
+        designing frameworks to model human visual selective attentions. She is also interested in exploring the application of these salient object detection models 
+        for robotic manipulation. 
       </div>
     </div>
     <!--Publications-->
@@ -159,10 +158,10 @@
           <li style="list-style-type: none">
             <ul style="list-style: outside">
               <li>
-                "Transformer based self-context aware prediction for few-shot anomaly detections in videos."
-                Gargi V Pillai, <b>Ashish Verma</b>, Debashis Sen.
-                <i>IEEE International Conference on Image Processing (ICIP).</i>
-                IEEE, 2022. &nbsp;
+                "Saliency based fast object localization and recognition for mechanical assembly."
+                <b>Sudipta Bhuyan, </b>Debashis Sen</b>, Sankha Deb.
+                <i>IEEE India Council International Conference (INDICON), 1-6.</i>
+                IEEE, 2018. &nbsp;
                 <a href="" target="_blank"><span class="pdfBadge badge bg-info text-dark">PDF</span></a>
                 <a href="" target="_blank"><span
                     class="webBadge badge bg-dark">Webpage</span></a>
