--- a/index.html
+++ b/index.html
@@ -167,19 +167,19 @@
                     class="webBadge badge bg-dark">Webpage</span></a>
               </li>
               <li>
-                "HMM-based Convolutional LSTM for Visual Scanpath Prediction."
-                <b>Ashish Verma</b>, Debashis Sen.
-                <i>27th European Signal Processing Conference (EUSIPCO).</i>
-                IEEE, 2019. &nbsp;
+                "Task level Planning and Implementation of Robotic Assembly Under Machine Vision Guidance."
+                </b>A Mishra<b>,Sudipta Bhuyan</b>, S Aggrarwal </b>, Sankha Deb </b>, Debashis Sen.
+                <i>27th AIMTDR.</i>
+                2016. &nbsp;
                 <a href="" target="_blank"><span class="pdfBadge badge bg-info text-dark">PDF</span></a>
                 <a href="" target="_blank"><span
                     class="webBadge badge bg-dark">Webpage</span></a>
               </li>
               <li>
-                "Electrocardiogram denoising using Wavelet decomposition and EMD domain filtering."
-                <b>Ashish Verma</b>, Pratik, Gayadhar Pradhan.
-                <i> IEEE Region 10 Conference (TENCON).</i>
-                IEEE, 2016. &nbsp;
+                "Development of a flexible assembly system using industrial robot with machine vision guidance and dexterous multi-finger gripper."
+                </b>A Mishra </b>, Sainul I Ansari <b>, Sudipta Bhyan </b>, Sankha Deb </b>, Debashish Sen </b>, A K Deb.
+                <i> Precision Product-Process Design and Optimization).</i>
+                2017. &nbsp;
                 <a href="" target="_blank"><span class="pdfBadge badge bg-info text-dark">PDF</span></a>
                 <a href="" target="_blank"><span class="webBadge badge bg-dark">Webpage</span></a>
               </li>
@@ -189,12 +189,32 @@
           <li style="list-style-type: none">
             <ul style="list-style: outside">
               <li>
-                "Generative Augmentation Driven Prediction of Diverse Visual Scanpaths in Images."
-                <b>Ashish Verma</b>, Debashis Sen.
-                <i>IEEE Transactions on Artificial Intelligence
-                </i>
-                (Year): Page Number.&nbsp;
-                <a href="https://ashishverma03.github.io/Diverse-Visual-Scanpath"><span
+                "Structure‐aware multiple salient region detection and localization for autonomous robotic manipulation."
+                <b>Sudipta Bhuyan</b>, Debashis Sen.
+                <i>IET Image Processing
+                </i> 
+                16 (4), 1135-1161, 2021 .&nbsp;
+                <a href=""><span
+                    class="webBadge badge bg-dark">Webpage</span></a>
+                <span class="badge bg-danger">New</span>
+              </li>
+              <li>
+                "Tsallis entropy based optimal multilevel thresholding using cuckoo search algorithm Swarm and Evolutionary Computation."
+                </b>S Aggrarwal </b>, R Panda <b>, Sudipta Bhuyan</b>, B K Panigrahi.
+                <i>Swarm and Evolutionary Computation
+                </i> 
+                16, 16-30, 2013 .&nbsp;
+                <a href=""><span
+                    class="webBadge badge bg-dark">Webpage</span></a>
+                <span class="badge bg-danger">New</span>
+              </li>
+              <li>
+                "Edge magnitude based multilevel thresholding using Cuckoo search technique."
+                </b>S Aggrarwal </b>, R Panda <b>, Sudipta Bhuyan.
+                <i>Expert Systems with Applications 
+                </i> 
+                40 (18), 7617-7628, 2013 .&nbsp;
+                <a href=""><span
                     class="webBadge badge bg-dark">Webpage</span></a>
                 <span class="badge bg-danger">New</span>
               </li>
