--- a/index.html
+++ b/index.html
@@ -236,9 +236,9 @@
           </li>
           <li style="list-style-type: none">
             <ul style="list-style: outside">
-              <li>Generation of Artificial Visual Scanpaths for Dynamic Analysis of Still Images</li>
+              <li>Multi-sensory Robot Vision System for Manufacturing Industry Applications  </li>
               <li>Tools: Matlab, Python, PyTorch</li>
-              <li><b>Supervisor:</b> Prof. Debashis Sen</li>
+              <li><b>Supervisor:</b> Prof. Debashis Sen </b>, Prof. Sankha Deb</li>
             </ul>
           </li>
           <li>
@@ -246,7 +246,7 @@
               Masters of Technology in Communication Systems
               </span>
             <span class="timePeriod"><i class="far fa-calendar-alt"></i>&nbsp; July 2014 - July 2016</span><br /><span
-              style="font-style: italic">National Institute of Technology Patna</span>
+              style="font-style: italic">VSSUT, Burla</span>
           </li>
           <li style="list-style-type: none">
             <ul style="list-style: outside">
@@ -262,9 +262,9 @@
             </ul>
           </li>
           <li>
-            <span class="subHead">Bachelors of Technology in Electronics and Telecommunication Engineering</span>
+            <span class="subHead">Bachelors of Technology in Applied Electronics and Instrumentation Engineering</span>
             <span class="timePeriod"><i class="far fa-calendar-alt"></i>&nbsp; July2009 - June 2013</span><br /><span
-              style="font-style: italic">Shri Shankaracharya Engineering College Bhilai (CSVTU)</span>
+              style="font-style: italic">Silicon Institute of Technology, Bhubaneswar </span>
           </li>
           <li style="list-style-type: none">
             <ul style="list-style: outside">
