--- a/index.html
+++ b/index.html
@@ -306,8 +306,7 @@
           <li style="list-style-type: none">
             <ul style="list-style: outside">
               <li>
-                Proposed a diverse visual scanpath prediction
-                model driven by novel generative augmentation technique.
+                Multi-sensory Robot Vision System for Manufacturing Industry Applications  
               </li>
             </ul>
           </li>
@@ -365,9 +364,9 @@
             <span class="float-end"> June 2014</span>
           </li>
           <li class="list-group-item">
-            Qualify GATE Examination in consecutive four years <br />
-            2013, 2014, 2015, 2016 and scored 565, 607, 548, <br />
-            and 599 respectively.
+            Qualify GATE Examination <br />
+             <br />
+            
             <span class="float-end"> March 2013-2016</span>
           </li>
           <li class="list-group-item">
@@ -390,10 +389,10 @@
           <li style="list-style-type: none">
             <ul style="list-style: inside">
               <li>
-                Taught deep learning tutorials for Short Term Course on "Machine Vision for Robot Applications in Manufacturing, 2022" (MVRAM '22) organised by Centre of Excellence in Advanced Manufacturing Technology (COEAMT), IIT Kharagpur. <br />
+                Taught LabView tutorials for Short Term Course on "Machine Vision for Robot Applications in Manufacturing, 2022" (MVRAM '22) organised by Centre of Excellence in Advanced Manufacturing Technology (COEAMT), IIT Kharagpur. <br />
               </li>
               <li>
-                Delivered a hands on session in the Workshop on Deep Learning and Optimisation Organised by Techno Main Salt Lake, Kolkata Sponsored by NIT Patna (January 2021). <br />
+                 <br />
               </li>
               <li>
                 Delivered a hands on session in the QIP short term course on "FUNDAMENTALS OF DIGITAL IMAGE AND VIDEO PROCESSING WITH 30D APPLICATIONS" Organised by Dept. of Mining Engineering, IIT Kharagpur (May, 2018).<br /> 
@@ -421,16 +420,16 @@
           <li style="list-style-type: none">
             <ul style="list-style: inside">
               <li>
-                Worked as Interim Engineering Intern at Qualcomm India Private Limited from May 4, 2020 to July3, 2020. <br />
+                <br />
               </li>
               <li>
-                “Summer School on Machine Learning” at IIIT Hyderabad during 10th – 15th July, 2017. <br /> 
+                 <br /> 
               </li>
               <li>
-                Short-Term Course on Recent Trends in Speech and Image Processing at NIT Patna during 23rd -27th June, 2015. <br />
+                 <br />
               </li>
               <li>
-                Short-Term Course on Analog Integrated Circuits at NIT Patna during 15th -22nd June, 2015. <br /> 
+                 <br /> 
               </li>
             </ul>
           </li>
@@ -440,7 +439,7 @@
   <footer class="mt-3 mt-md-0">
     <p style="text-align: center">
       <i class="far fa-copyright"></i> 2022
-      <a href="https://github.com/ashishverma03" target="_blank">Ashish Verma</a>.
+      <a href="https://github.com/sudiptabhuyan1" target="_blank">Sudipta Bhuyan</a>.
       Made in
       <a href="https://www.incredibleindia.org/" target="_blank"><img id="flag"
           src="/assets/images/india-flag-icon-32.png" alt="My Great Country India's Flag" /></a>
