--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
           <li class="subHead">Conference Attended</li>
           <li style="list-style-type: none">
             <ul style="list-style: inside">
-              <li>EUSIPCO 2019</li>
+              <li>INDICON, IEEE, 2018</li>
             </ul>
           </li>
           
