--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
               Indian Institute of Technology Kharagpur, West Bengal, India
               <br />
               <br />
-              <a href="https://www.linkedin.com/in/ashish-verma-4910816b/">
+              <a href="https://www.linkedin.com/in/sudipta-bhuyan-076764229/">
                 <i class="fab fa-linkedin fa-2x"></i></a>
               <a href="">
                 <i class="fab fa-twitter-square fa-2x"></i></a>
-              <a href="https://scholar.google.co.in/citations?user=ZN56IiYAAAAJ&hl=en">
+              <a href="https://scholar.google.co.in/citations?user=VWV3V9kAAAAJ&hl=en&oi=ao">
                 <i class="ai ai-google-scholar-square ai-2x"></i></a>
               <a href="">
                 <i class="ai ai-researchgate-square ai-2x"></i></a>
