--- a/Fuzzy-Fusion-SOD.html
+++ b/Fuzzy-Fusion-SOD.html
@@ -305,7 +305,7 @@
         <footer>
             <p style="text-align: center">
                 <i class="far fa-copyright"></i> 2023
-                <a href="https://github.com/aupendu" target="_blank">Sudipta Bhuyan</a>.
+                <a href="https://github.com/sudiptabhuyan1" target="_blank">Sudipta Bhuyan</a>.
                 Made in
                 <a href="https://www.incredibleindia.org/" target="_blank"><img id="flag"
                         src="/assets/images/india-flag-icon-32.png" alt="My Great Country India's Flag" /></a>
